Adding opengraph addming missing toml

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>ClickJam</title>
+        <title>Pepe Wants to Stream</title>
+        <meta property="og:title" content="Pepe Wants to Stream" />
+        <meta property="og:description" content="A fun clicker game featuring Pepe. Help Pepe get ready to stream!" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://yourdomain.com/" />
+        <meta property="og:image" content="/img/bg/pepe.webp" />
     </head>
     <body>
         <div id="root"></div>
